estilizando os botoes

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,10 @@
 {
-  "cSpell.words": ["Deslogado", "deslogar", "Guard", "usuario"]
+  "cSpell.words": [
+    "Deslogado",
+    "deslogar",
+    "Guard",
+    "standalone",
+    "usuario",
+    "works"
+  ]
 }
